--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,7 @@ html {
 
 body {
 	height: 100%;
-	background-color: #fff ;
-	
+	background-color: #fff;	
 }
 
 #wrapper {
@@ -164,8 +163,7 @@ a, a:hover {
 }
 
 #musicianname {
-	background: #faf6f6  url(img/Hendrix.png) no-repeat 
-	center bottom;
+	background: #faf6f6  url(img/Hendrix.png) no-repeat center bottom;
 	float: left;
 	display: inline-block;
 	height: 100%;	
@@ -213,6 +211,7 @@ a, a:hover {
 	padding-top: 95px;
 	padding-bottom: 25px;
 }
+
 #bandmembers {
 	padding-top: 170px;
 }
@@ -250,7 +249,6 @@ a, a:hover {
 	float: left;
 	max-width: 56%;
 }
-
 
 #vinylWrapper {
 	height: 346px;
@@ -293,7 +291,6 @@ a, a:hover {
 	visibility: hidden;
 	opacity: 0;
 }
-
 #toner {
 	top: -130px;
 	left: 480px;
@@ -325,6 +322,8 @@ a, a:hover {
 .tonerSpin {
 	animation: toner 1.5s ease-out 1;
 	-webkit-animation-fill-mode: forwards;
+	-moz-animation-fill-mode: forwards;
+	-o-animation-fill-mode: forwards;
 }
 .vinylOnPause {
 	z-index: 1;
@@ -358,12 +357,10 @@ a, a:hover {
 .disclist img:hover {
 	opacity: 0.7;
 }
-
 .discsEllipse {
 	float: right;
 	padding-top: 12px;
 }
-
 .disclist p {
 	font: 30px Oswald-Light;
 	color: #241c18;
@@ -371,7 +368,6 @@ a, a:hover {
 	margin-right: 65px;
 	margin-left: 40px;
 }
-
 .disclist li {
 	line-height: 60px;
 }
@@ -430,7 +426,6 @@ a, a:hover {
 .playAnimation {
 	animation: animateButt 1.9s linear infinite;
 }
-
 
 #tracklist1 {
 	display: block;
@@ -512,7 +507,6 @@ a, a:hover {
 	background-color: #e4dddb;
 	margin-top: -52px;
 	margin-left: 115px;
-
 }
 
 .concertinfo {
@@ -522,6 +516,7 @@ a, a:hover {
 	font: 30px Oswald-Light;
 	color: #241c18;
 }
+
 .ticketline img {
 	float: right;
 	margin-top: -40px;
@@ -532,9 +527,7 @@ a, a:hover {
 	opacity: 0.7;
 }
 
-#footer {
-	width: 100%;
-}
+#footer {width: 100%;}
 #feedback {
 	height: 962px;
 	background: #8c776c url(img/footerHendrix.jpg) no-repeat center bottom;
@@ -694,10 +687,6 @@ a, a:hover {
 }
 
 
-
-
-
-
 @media screen and ( max-width: 1366px) {
 	#home {
 		height: 100%;
@@ -705,8 +694,10 @@ a, a:hover {
 	#about {
 	}
 	#about .container{
-		height: 100%;
 		height: 800px;
+	}
+	#musicianname {
+		background-size: auto 100%;
 	}
 	#musicianname div {
 		padding-top: 500px;
@@ -719,7 +710,7 @@ a, a:hover {
 		left: 255px;
 	}
 }
-@media screen and ( max-width: 1359px) {
+@media screen and ( max-width: 1350px) {
 	#membersinfo {
 		padding-left: 0;
 		padding-right: 0;
@@ -727,9 +718,10 @@ a, a:hover {
 	}
 	#membersinfo p {
 		width: 100%;
+		padding: 0 0 0 0;
 	}
 	#musicianname {
-		background-size: 77%;
+		background-size: auto 100%;
 		width: 58%;
 	}
 	#musicianname div {
