--- a/styles.css
+++ b/styles.css
@@ -731,10 +731,9 @@ a, a:hover {
 		padding-left: 140px;
 	}
 }
-/*ipad*/
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+
+@media screen 
+and (max-width : 1160px) 
  {
  	#membersinfo p {
 		padding: 0 0 0 0;
@@ -785,10 +784,8 @@ and (max-device-width : 1024px)
 	
 }
 /*Ipad portrait*/
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) 
+@media screen 
+and (max-width: 1024px) 
 {
 	#coverpic {
 		left: 100px;
@@ -812,6 +809,7 @@ and (orientation : portrait)
 	}
 
 }
+
 @media screen and ( max-width: 775px) {
 	body html {
 		height: 100%;
@@ -878,8 +876,8 @@ and (orientation : portrait)
 	}
 }
 
-@media only screen 
-and (max-device-width : 750px)  {
+@media screen 
+and (max-width : 750px)  {
 	#musicianname {
 		background-size: 100% auto;
 	}
